<resources>
    <string name="app_name">AppGeo</string>
    <string name="y1">Y1:</string>
    <string name="distancia_entre_dos_puntos">Distancia entre dos puntos</string>
    <string name="x2">X2:</string>
    <string name="x1">X1:</string>
    <string name="y2">Y2:</string>
    <string name="coordenadas">Coordenadas:</string>
    <string name="coordenadax1">coordenadaX1</string>
    <string name="calcular">Calcular</string>
    <string name="resultad">Resultado:</string>
</resources>