<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distancia_entre_dos_puntos"
        android:textColor="#AE083C"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="134dp"
        android:layout_height="85dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="288dp"
        android:text="@string/calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtBoxY1"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="208dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textY1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/textY1"
        android:text="@string/y1"
        android:textColor="#AE083C"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textX2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/textX2"
        android:text="@string/x2"
        android:textColor="#AE083C"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtBoxY2"
        android:layout_width="90dp"
        android:layout_height="43dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textX1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/textX1"
        android:text="@string/x1"
        android:textColor="#AE083C"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtBoxX1"
        android:layout_width="91dp"
        android:layout_height="44dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="152dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textY2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/textY2"
        android:text="@string/y2"
        android:textColor="#AE083C"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtBoxX2"
        android:layout_width="91dp"
        android:layout_height="44dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txbDistancia"
        android:layout_width="173dp"
        android:layout_height="46dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="432dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txbInclinacion"
        android:layout_width="172dp"
        android:layout_height="43dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="492dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textDistancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/textX1"
        android:text="Distancia:"
        android:textColor="#AE083C"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textInclinacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/textX1"
        android:text="Inclinacion:"
        android:textColor="#AE083C"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/calculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultad"
        android:textColor="#AE083C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/coordenadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coordenadas"
        android:textColor="#AE083C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>